--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,15 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
+<%- include('includes/head.ejs') -%>
+<link rel="stylesheet" href="/css/form.css">
+
 <body>
-    <% if (errorMessage) { %>
-        <div class="user-message user-message--error"><%= errorMessage %></div>
-    <% } %>
-    <h1>Login</h1>
-</body>
-</html>
+    <%- include('includes/navigation.ejs') %>
+
+    <main>
+        <div class="form-align">
+            <h1>Login</h1>
+            <form class="main-form" action="/login" method="post">
+                <div class="form-control">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" />
+                </div>
+
+                <div class="form-control">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password" />
+                </div>
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                <input type="submit" value="Submit" />
+            </form>
+        </div>
+    </main>
+
+<%- include('includes/footer.ejs') %>
