--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,31 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup</title>
-</head>
+<%- include('includes/head.ejs') -%>
+<link rel="stylesheet" href="/css/form.css">
+
 <body>
-    <% if (errorMessage) { %>
-        <div class="user-message user-message--error"><%= errorMessage %></div>
-    <% } %>
-    <h1>Signup Form</h1>
-    <form action="/signup" method="post">
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name" />
-        <br>
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" />
-        <br>
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" />
-        <br>
-        <label for="phone">Phone</label>
-        <input type="text" name="phone" id="phone" />
-        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-        <br><br>
-        <input type="submit" value="Submit" />
-    </form>
-</body>
-</html>
+    <%- include('includes/navigation.ejs') %>
+
+    <main>
+        <div class="form-align">
+            <h1>Signup Form</h1>
+            
+            <form action="/signup" method="post">
+                <div class="form-control">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" />
+                </div>
+                
+                <div class="form-control">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" />
+                </div>
+
+                <div class="form-control">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password" />
+                </div>
+                
+                <div class="form-control">
+                    <label for="phone">Phone</label>
+                    <input type="text" name="phone" id="phone" />
+                </div>
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                <input type="submit" value="Submit" />
+            </form>
+        </div>
+    </main>
+
+<%- include('includes/footer.ejs') %>
