--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -12,6 +12,10 @@
                 </li>
             <% } else { %>
                 <li class="main-header__item">
+                    <a class="" href="/profile">Profile</a>
+                </li>
+
+                <li class="main-header__item">
                     <form action="/logout" method="post">
                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <button type="submit">Logout</button>
