--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,47 +1,19 @@
-<div class="backdrop"></div>
-<header class="main-header">
-    <button id="side-menu-toggle">Menu</button>
-    <nav class="main-header__nav">
-        <ul class="main-header__item-list">
-            <% if (!isAuthenticated) { %>
-                <li class="main-header__item">
-                    <a class="" href="/login">Login</a>
-                </li>
-                <li class="main-header__item">
-                    <a class="" href="/signup">Signup</a>
-                </li>
-            <% } else { %>
-                <li class="main-header__item">
-                    <a class="" href="/profile">Profile</a>
-                </li>
+<div class="topnav">
+    <div class="logo">
+        <a href="#">My Blog</a>
+    </div>
 
-                <li class="main-header__item">
-                    <form action="/logout" method="post">
-                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                        <button type="submit">Logout</button>
-                    </form>
-                </li>
-            <% } %>
-        </ul>
-    </nav>
-</header>
-
-<nav class="mobile-nav">
-    <ul class="mobile-nav__item-list">
+    <div class="url-link">
+        <a href="/">Home</a>
         <% if (!isAuthenticated) { %>
-            <li class="mobile-nav__item">
-                <a class="" href="/login">Login</a>
-            </li>
-            <li class="mobile-nav__item">
-                <a class="" href="/signup">Signup</a>
-            </li>
+            <a href="/login">Login</a>
+            <a href="/signup">Register</a>
         <% } else { %>
-            <li class="mobile-nav__item">
-                <form action="/logout" method="post">
-                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                    <button type="submit">Logout</button>
-                </form>
-            </li>
+            <a href="/profile">Profile</a>
+            <form action="/logout" method="post">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                <button type="submit">Logout</button>
+            </form>
         <% } %>
-    </ul>
-</nav>
+    </div>
+</div>
