--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,7 +4,10 @@
     <%- include('includes/navigation.ejs') %>
 
     <main>
-        <h2>This is my main page</h2>
+        <div class="content">
+            <h2>CSS Template</h2>
+            <p>A topnav, content and a footer.</p>
+        </div>
     </main>
 
 <%- include('includes/footer.ejs') %>
