--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,29 +1,32 @@
-.form-control {
-    margin: 1rem 0;
-}
-  
-.form-control label,
-.form-control input,
-.form-control textarea {
-    display: block;
-    width: 30%;
-    margin-bottom: 0.25rem;
+input[type=text], input[type=email], input[type=password], input[type=file] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
-.form-control input,
-.form-control textarea {
-  border: 1px solid #a1a1a1;
-  font: inherit;
-  border-radius: 2px;
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.form-control input:focus,
-.form-control textarea:focus {
-  outline-color: #00695c;
+input[type=submit]:hover {
+  background-color: #45a049;
 }
 
-.form-control input.invalid,
-.form-control textarea.invalid {
-  border-color: red;
+.login-form {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  width: 50%;
+  margin-left: 300px;
 }
-  
