--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,31 +6,26 @@
 
     <main>
         <div class="form-align">
-            <h1>Signup Form</h1>
-            
-            <form action="/signup" method="post">
-                <div class="form-control">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" />
-                </div>
-                
-                <div class="form-control">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" />
-                </div>
+            <h2 style="text-align: center;">Register</h2>
 
-                <div class="form-control">
+            <div class="login-form">
+                <form action="/signup" method="post">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Your Name..">
+
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Your Email..">
+              
                     <label for="password">Password</label>
-                    <input type="password" name="password" id="password" />
-                </div>
+                    <input type="password" id="password" name="password" placeholder="********">
                 
-                <div class="form-control">
                     <label for="phone">Phone</label>
-                    <input type="text" name="phone" id="phone" />
-                </div>
-                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                <input type="submit" value="Submit" />
-            </form>
+                    <input type="text" id="phone" name="phone" placeholder="Your Phone..">
+
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
         </div>
     </main>
 
