--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,6 +6,8 @@
 
     <main>
         <div class="form-align">
+            <%- include('includes/alert.ejs') %>
+            
             <h2 style="text-align: center;">Register</h2>
 
             <div class="login-form">
