--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,10 +7,13 @@
 
     <main>
         <div class="form-align">
-            <%- include('includes/alert.ejs') %>
-            
             <h2 style="text-align: center;">User Profile</h2>
             <div class="login-form">
+                <% if(errorMessage) { %>
+                    <div class="alert alert-success" role="alert">
+                        <%= errorMessage %>
+                    </div>
+                <% } %>
                 <form action="/profile" method="post" enctype="multipart/form-data">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" placeholder="Your Name.." value="<%= user.name %>">
