--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,16 +1,21 @@
 <%- include('includes/head.ejs') -%>
 <link rel="stylesheet" href="/css/form.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" >
 
 <body>
     <%- include('includes/navigation.ejs') %>
 
     <main>
         <div class="form-align">
-            <%- include('includes/alert.ejs') %>
             
             <h2 style="text-align: center;">Register</h2>
 
             <div class="login-form">
+                <% if(errorMessage) { %>
+                    <div class="alert alert-success" role="alert">
+                        <%= errorMessage %>
+                    </div>
+                <% } %>
                 <form action="/signup" method="post">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" placeholder="Your Name..">
